--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react"
   ],
   "author": "Henry Do",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
